# istota

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVLOG.md  README.md  TODO.md  cliff.toml  install.sh  mkdocs.yml  pyproject.toml  schema.sql
.claude/rules/: brain.md  config.md  executor.md  scheduler.md  skills.md  transport.md
.github/workflows/: release.yml
config/: config.dev.toml.example  config.example.toml  persona.md  system-prompt.md
config/guidelines/: email.md  talk.md  web.md
config/users/: alice.example.toml
deploy/: README.md  install.sh  local-playbook.yml  render_config.py  settings_to_vars.py  wizard.sh
deploy/ansible/: README.md
deploy/ansible/defaults/: main.yml
deploy/ansible/files/: validate_config.py
deploy/ansible/filter_plugins/: istota_toml.py
deploy/ansible/handlers/: main.yml
deploy/ansible/tasks/: main.yml
deploy/ansible/templates/: admins.j2  config.toml.j2  docker-compose.devbox.yml.j2  istota-backup.sh.j2  istota-browser-daily-restart.service.j2  istota-browser-daily-restart.timer.j2  istota-browser-health.cron.j2  istota-browser-watchdog.cron.j2  istota-browser-watchdog.service.j2  istota-browser-watchdog.sh.j2  istota-browser-watchdog.timer.j2  istota-devbox-iptables.service.j2  istota-update.sh.j2  (+14 more)
docker/: .env.example  docker-compose.browser.yml  docker-compose.override.yml  docker-compose.yml  init.sh  rebuild.sh
docker/browser/: Dockerfile  browse_api.py  browsing.py  chrome.py  xdotool.py
docker/devbox/: Dockerfile
docker/istota/: Dockerfile  entrypoint.sh  provision-nc.sh
docker/nginx/: default.conf.template
docs/: EXPERIMENTAL.md  LOCAL_INSTALL.md  index.md
docs/architecture/: brain.md  context.md  database.md  executor.md  memory.md  overview.md  scheduler.md  task-lifecycle.md
docs/configuration/: credentials.md  native-brain.md  overview.md  per-user.md  persona.md  reference.md
docs/deployment/: ansible.md  docker.md  security.md
docs/development/: adding-skills.md  setup.md  testing.md
docs/features/: briefings.md  email.md  google-workspace.md  health.md  heartbeat.md  location.md  memory.md  scheduling.md  skills.md  talk.md  web-chat.md  web-interface.md
docs/getting-started/: local-install.md  post-install.md  quickstart-bare-metal.md  quickstart-docker.md
docs/reference/: cli.md  commands.md  environment-variables.md  skills-index.md
scripts/: brain_shadow.py  build-web-static.sh  check_money_isolation.sh  dev-up.sh  extract_money_to_standalone.py  import_garmin_tracks.py  migrate_json_to_kv.py  migrate_money_workspace_config.py  native_repl.py  probe_monarch_login.py  release.sh  test_native_brain.py
scripts/dev/: seed_feed_preview.py
scripts/examples/: shared_kv_curation.sh
src/istota/: __init__.py  async_runtime.py  cli.py  cli_briefings.py  cli_money.py  commands.py  config.py  context.py  cron_loader.py  db.py  db_backup.py  db_health.py  db_relocate.py  db_restore.py  devbox_proxy.py  devbox_proxy_protocol.py  docker_proxy.py  email_ownership.py  email_poller.py  email_support.py  events.py  executor.py  experimental.py  feeds.py  garmin_routes.py  geo.py  heartbeat.py  knowledge_graph.py  location_loader.py  location_logic.py  memory_search.py  modules.py  network_proxy.py  nextcloud_api.py  notifications.py  scheduler.py  scheduler_deferred.py  secret_schema.py  secrets_store.py  serve.py  (+17 more)
src/money/: __init__.py  _config_io.py  cli.py  config.py  db.py  jobs.py  routes.py  work.py  workspace.py
tests/: conftest.py  test_ansible_briefing_blocks_toml.py  test_ansible_user_provisioning.py  test_async_runtime.py  test_backup_alert.py  test_brain.py  test_brain_aliases.py  test_brain_degraded_policy.py  test_brain_fallback_breaker.py  test_brain_models.py  test_brain_role_contract.py  test_brain_steering_capability.py  test_brain_tmux.py  test_briefing.py  test_briefing_loader.py  test_briefing_trigger.py  test_briefings_db.py  test_briefings_generate.py  test_briefings_loader.py  test_briefings_migrate.py  test_briefings_routes.py  test_briefings_routes_shared_blocks.py  test_briefings_sources.py  test_browser_chrome_watchdog.py  test_caldav_client_leak.py  test_canonical_room_transcript.py  test_channel_sleep_cycle.py  test_chat_history_durable.py  test_chat_history_paging.py  test_claude_code_usage_limit.py  test_cli_briefing_ensure.py  test_cli_briefings.py  test_cli_resource_ensure.py  test_cli_secret.py  test_cli_user_ensure.py  test_commands.py  test_commands_search.py  test_commands_steer.py  test_config.py  test_config_brain_fallback.py  (+189 more)
tests/adversarial/: send_t1.py
tests/money/: test_api.py  test_cli.py  test_cli_experimental.py  test_cli_money.py  test_config.py  test_config_store.py  test_db.py  test_dedup.py  test_edit.py  test_invoicing.py  test_ledger.py  test_migrate.py  test_monarch_client.py  test_routes_accounts.py  test_routes_config.py  test_routes_edit.py  test_routes_invoices.py  test_security.py  test_tax.py  test_transactions.py  test_work.py
tests/native/: _mock_provider.py  test_agent_coercion.py  test_agent_loop.py  test_agent_loop_helpers.py  test_agent_loop_integration.py  test_agent_sanitize.py  test_brain_routing.py  test_brain_shadow.py  test_claude_code_inference.py  test_llm_catalog.py  test_llm_oneshot.py  test_llm_replay.py  test_llm_tokens.py  test_llm_types.py  test_make_provider.py  test_native_brain.py  test_native_repl.py  test_native_resolution.py  test_native_steering.py  test_native_user_key.py  test_openai_compat.py  test_overflow_recovery.py  test_prompt_caching.py  test_reasoning_effort.py  test_session_compaction.py  test_session_loop_detection.py  test_session_messages.py  test_session_retry.py  test_session_usage.py  test_tool_images.py  test_tools_bash.py  test_tools_edit.py  test_tools_files.py  test_triage_completer.py  test_usage_persistence.py
tests/repl/: test_session.py
web/: .prettierignore  .prettierrc.json  package-lock.json  package.json  svelte.config.js  vite-mock-api.ts  vite.config.ts  vitest.config.ts
web/src/: app.css  app.d.ts  app.html
(+424 files in other folders)
