[project]
name = "istota"
version = "0.30.0"
description = "Personal AI agent integrated with Nextcloud"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "requests>=2.32.0",
    "croniter>=2.0.0",
    "tomli>=2.0.0",
    "cryptography>=42.0",
    # Image pre-shrink for vision attachments runs on every task with an image
    # attachment, so Pillow + HEIC support live in core, not an extra.
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
calendar = [
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
]
email = [
    "imap-tools>=1.0.0",
]
markets = [
    "yfinance>=0.2.0",
]
transcribe = [
    "pytesseract>=0.3.10",
]
memory-search = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
whisper = [
    "faster-whisper>=1.1.0",
    "psutil>=5.9.0",
]
location = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "geopy>=2.4",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.9",
]
money = [
    "click>=8.0",
    "tomli-w>=1.0.0",
    "beancount>=3.0.0",
    "beanquery>=0.1.0",
    "weasyprint>=62.0",
    # Used by the vendored Monarch client (money/_vendor/monarch_client.py)
    # to talk to api.monarch.com over HTTP with cookie-based auth.
    "aiohttp>=3.10",
]
feeds = [
    "feedparser>=6.0.0",
    "bleach>=6.0.0",
    "click>=8.0",
]
garmin = [
    # Native DI OAuth + token persistence; replaced the broken SSO flow
    # in v0.3.x. Pulls in curl_cffi for TLS-fingerprint matching.
    # Requires Python 3.12+ — istota itself still supports 3.11, so the
    # marker keeps 3.11 environments resolvable without the extra.
    "garminconnect>=0.3.3; python_version >= '3.12'",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
# Lean footprint for a local single-user install (`uv tool install 'istota[local]'`):
# core agent + web UI + light pure-Python modules. Heavy modules (money, health,
# location, memory-search/torch, whisper, transcribe) stay opt-in. See
# docs/LOCAL_INSTALL.md. The `claude` CLI is an external prereq for the default brain.
local = [
    "istota[web]",
    "istota[feeds]",
    "istota[calendar]",
    "istota[email]",
    "istota[markets]",
]
all = [
    "istota[calendar]",
    "istota[email]",
    "istota[markets]",
    "istota[transcribe]",
    "istota[memory-search]",
    "istota[whisper]",
    "istota[location]",
    "istota[web]",
    "istota[money]",
    "istota[feeds]",
    "istota[garmin]",
]

[project.scripts]
istota = "istota.cli:main"
istota-scheduler = "istota.scheduler:main"
istota-skill = "istota.skill_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/istota"]
# Ship the built SvelteKit frontend as package data so the web UI works from a
# non-editable install (no repo checkout). The release build copies web/build →
# src/istota/web_static (gitignored) before `hatch build`; `artifacts` forces
# those otherwise-VCS-excluded files into the wheel. web_app._resolve_static_dir
# falls back to the packaged dir. Absent (dev build without the copy) → no error.
artifacts = ["src/istota/web_static/**"]

# schema.sql lives at the repo root (outside the package dir) but db.init_db
# needs it at runtime, including from a non-editable install with no checkout.
# Force it into the wheel as istota/schema.sql; _resolve_schema_path() reads it
# from there when the source-tree copy is absent.
[tool.hatch.build.targets.wheel.force-include]
"schema.sql" = "istota/schema.sql"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (deselected by default)",
    "live: native-brain tests hitting a real LLM API (needs a key; deselected by default)",
]
addopts = "-m 'not integration and not live' -n auto"
asyncio_mode = "auto"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
]
